added city search option

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <header>
         <h1>JavascriptWeather</h1>
-        <form action="submit">
+        <form action="submit" id="form">
             <input type="text" placeholder="Find a city..." id="search">
         </form>
     </header>
 
     <main>
-        <h2>Belgrade</h2>
-        <img id="image" alt="No data...">
+        <h2 id="city-h2">Belgrade</h2>
+        <img id="image" >
         <h3 id="type">Weather Type</h3>
         <div id="info">
             <h4 id="temperature">Temperature</h4>
