added 3 day forecast and updated UI

--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
     </header>
 
     <main>
-        <h2 id="city-h2">Belgrade</h2>
-        <img id="image" >
-        <h3 id="type">Weather Type</h3>
-        <div id="info">
-            <h4 id="temperature">Temperature</h4>
-            <h4 id="humidity">Humidity</h4>
-            <h4 id="pressure">Pressure</h4>
-        </div>
+       <div id="main">
+
+       </div>
+
+       <div id="forecast-container">
+           
+       </div>
     </main>
 
 </body>
